Release stream-level producer routing 0.3.0
